--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,6 +6,24 @@
     <title>fan00085 - HTML Assignment</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Sophia Fan</h1>
+    </header>
+
+   <main></main>
+   <article>
+    <h2>About Me</h2>
+
+    <p>My name is <mark>Sophia Fan</mark>, and I was born in <strong>Toronto</strong>, <abbr title="Ontario">ON</abbr> to immigrant parents. My father named me Sophia since he knew it was usually associated with <em>wisdom</em> in Greece, which is a fun fact I didn’t know until recently. I was born on July 1<sup>st</sup>, <em>2006</em>, making me <mark>18 years old</mark> as of recently! I am a Chinese Canadian, though I must admit I know little about the culture from which I stem from. This is also the case for my <em>little sister</em>, who is 16 and turning 17 on the 7<sup>th</sup> of March. We have quite a bit in common, though we are more different than alike. Something we do share is our adoration for <strong>cats</strong>, finding ourselves spoiling and giving all the love we can to <mark><strong>my two kittens</strong></mark>. I am extremely <strong>passionate</strong> when it comes to discussing cats, and perhaps persuaded <em>three</em> of my friends into getting one, or two, themselves. I am also very much into <strong>film</strong>, which makes sense since I was in a <em>specialized</em> program for it in high school. Although I’m passionate and quite knowledgeable, I try not to be a <strong>snob</strong>, unlike most of my peers at the time, since belittling people and acting superior is one of my greatest pet peeves. I’d like to consider myself as a more <mark>gentle and calm person</mark>, who is more considerate yet not necessarily a people pleaser. My friends all consider me <em>funny</em>, which is something I <strong>pride</strong> myself on, though I know it is subjective. I’m also quieter than I’d like to be, <mark>though I am improving</mark> on it, especially since <strong>moving out and being on my own</strong>.</p>
+
+
+    <p>From ages 3 to 12 I found myself with a lot of <strong>time</strong>. My mother put me in quite a variety of <em>extracurriculars</em> because of it, though most of them were some sort of <em>art form</em>. Whether it was performance art, traditional art, or instrumental, I was always partaking in more of a <em>creative</em> field. This led me to becoming one of the <q>art kids</q> in primary school. Though I enjoyed this, I didn’t get much time to dabble in the more <mark><abbr title="Science, Technology, Engineering, Mathematics">STEM</abbr></mark>-focused subjects. This didn’t help when I joined high school, where I was integrated into the <abbr title="Claude Watson">CW</abbr> program under the <mark>film arts</mark> department, leaving me even less time to try anything new. Though <strong>I adore art</strong> and want to <em>pursue</em> it in one way or another in my career, I do want to learn more about the <abbr title="Science, Technology, Engineering, Mathematics">STEM</abbr> that goes into it. This is a part of the reason why I chose to go to <mark><strong>Algonquin College</strong></mark> rather than the select universities in <em>Toronto</em>: I have a desire to learn more about the <strong>capabilities</strong> within myself, and the skills I've held myself back from learning. To follow the quote: <blockquote>I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</blockquote> -<cite>Neil Armstrong</cite></p>
+   </article>
+
+   <footer>
+    <p>&copy; 2024 by Sophia Fan &#127804;	
+    </p>
+   </footer>
+
 </body>
 </html>
