--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -21,8 +21,7 @@
    </article>
 
    <footer>
-    <p>&copy; 2024 by Sophia Fan &#127804;	
-    </p>
+    <p>&copy; 2024 by Sophia Fan &#127804;</p>
    </footer>
 
 </body>
