update index.html and notes.html

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -7,11 +7,34 @@
 </head>
 <body>
     <header>
-        <h1></h1>
-        <nav></nav>
+        <h1>Notes</h1>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">About Me</a></li>
+                <li ><a href="notes.html">Notes</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main></main>
+    <main>
+        <dl>
+            <dt>The <mark><strong>heading</strong></mark> tag</dt>
+            <dd>The <abbr title="Header">h</abbr> tag is a code that transforms normal text into a larger and bold version, to show it's importance. It creates emphasis and seperates sections in a clean manner. The headings range from 1-6, however, <abbr title="Heading one">h1</abbr> must only be on a page once, whereas every other number following can be repeated. This is a paired tag. </dd>
+
+            <dt>The <mark><strong>footer</strong></mark> tag</dt>
+            <dd>The footer tag seperates content that should be placed at the top or center of the page, and pushes it to the end. This is done by creating a section for the information usually listed at the end such as: contact us and copyright information. This is a paired tag.</dd>
+
+            <dt>The <mark><strong>image</strong></mark> tag</dt>
+            <dd>The <abbr title="Image">img</abbr> tag impliments photographs or images into the page. It can be put inside the code either through the relative or absolute file path, with relative sourcing it from the subfolders within the main code folder, and and absolute sourcing it from the internet. When using the image tag, one must insert an alt, which is a brief descritption of the image. An alt is not seen unless the image, for some reason, is not working. It is also usefull for text to speech for the visuall impaired. This is a singular/empty tag.</dd>
+
+            <dt>The <mark><strong>paragraph</strong></mark> tag</dt>
+            <dd>The <abbr title="paragraph">p</abbr> tag is used to identify a paragraph in the code. It ensures readability of the text in the code which the coder wants displayed on the page. This is a paired tag.</dd>
+
+            <dt>The <mark><strong>description list</strong></mark> tag</dt>
+            <dd>The <abbr title="Description list">dl</abbr> tag creates a list which features subjects to be described. This is the tag currently being used. This tag must have a dt and a dd tag within the group. The <abbr title="Description term element">dt</abbr> tag is the general name of the work(s) being described. The <abbr title="Description details element">dd</abbr> tag is used to describe the term in the dt tag above it. This is a paired tag.</dd>
+        </dl>
+    </main>
 
     <footer></footer>
 
