--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -18,6 +18,7 @@
     </header>
 
     <main>
+        <h2>5 HTML Tags</h2>
         <dl>
             <dt>The <mark><strong>heading</strong></mark> tag</dt>
             <dd>The <abbr title="Header">h</abbr> tag is a code that transforms normal text into a larger and bold version, to show it's importance. It creates emphasis and seperates sections in a clean manner. The headings range from 1-6, however, <abbr title="Heading one">h1</abbr> must only be on a page once, whereas every other number following can be repeated. This is a paired tag. </dd>
