--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fan00085 - HTML Assignment</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
-        <h1>Sophia Fan</h1>
+        <h1 class="site-title">Sophia Fan</h1>
 
-        <nav>
+        <nav class="nav">
             <ul>
-                <li><a href="index.html">About Me</a></li>
-                <li ><a href="notes.html">Notes</a></li>
+                <li id="about-me"><a href="index.html">About Me</a></li> <br>
+                <li id="notes"><a href="notes.html">Notes</a></li>
             </ul>
         </nav>
     </header>
@@ -22,10 +23,11 @@
     
     <h2>About Me</h2>
 
-    <img src="images/grad_photo.jpg" alt="An image of myself at graduation" width="300">
+    <img id="my-image" src="images/grad_photo.jpg" alt="An image of myself at graduation" width="300">
 
     <p>My name is <mark>Sophia Fan</mark>, and I was born in <strong>Toronto</strong>, <abbr title="Ontario">ON</abbr> to immigrant parents. My father named me Sophia since he knew it was usually associated with <em>wisdom</em> in Greece, which is a fun fact I didn’t know until recently. I was born on July 1<sup>st</sup>, <em>2006</em>, making me <mark>18 years old</mark> as of recently! I am a Chinese Canadian, though I must admit I know little about the culture from which I stem from. This is also the case for my <em>little sister</em>, who is 16 and turning 17 on the 7<sup>th</sup> of March. We have quite a bit in common, though we are more different than alike. Something we do share is our adoration for <strong>cats</strong>, finding ourselves spoiling and giving all the love we can to <mark><strong>my two kittens</strong></mark>. I am extremely <strong>passionate</strong> when it comes to discussing cats, and perhaps persuaded <em>three</em> of my friends into getting one, or two, themselves. I am also very much into <strong>film</strong>, which makes sense since I was in a <em>specialized</em> program for it in high school. Although I’m passionate and quite knowledgeable, I try not to be a <strong>snob</strong>, unlike most of my peers at the time, since belittling people and acting superior is one of my greatest pet peeves. I’d like to consider myself as a more <mark>gentle and calm person</mark>, who is more considerate yet not necessarily a people pleaser. My friends all consider me <em>funny</em>, which is something I <strong>pride</strong> myself on, though I know it is subjective. I’m also quieter than I’d like to be, <mark>though I am improving</mark> on it, especially since <strong>moving out and being on my own</strong>.</p>
 
+<section class="hobbies">
     <h3>Hobbies!</h3>
     <ul>
         <li>Painting &#127912;</li>
@@ -34,6 +36,7 @@
         <li>Cooking &#129379;</li>
         <li>Baking &#127874;</li>
     </ul>
+</section>
 
     <img src="images/fruit_loops.jpg" alt="A simple watercolour painting" width="500">
 
