--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
-        <h1>Notes</h1>
+        <h1 class="site-title">Notes</h1>
 
-        <nav>
+        <nav class="nav">
             <ul>
-                <li><a href="index.html">About Me</a></li>
+                <li><a href="index.html">About Me</a></li> <br>
                 <li ><a href="notes.html">Notes</a></li>
             </ul>
         </nav>
