--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -38,7 +38,9 @@
         </dl>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>&copy; 2024 by Sophia Fan &#127804;</p>
+    </footer>
 
 </body>
 </html>
