--- a/midterm/index.html
+++ b/midterm/index.html
@@ -4,13 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fan00085 - Midterm</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Lone Starfish</h1>
+        <img class="bg-image" src="images/lone-starfish-wide.jpg" alt="starfish web header">
+        <nav class="nav-container">
+            <div class="wrapper">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#story">Story</a></li>
+                    <li><a href="#contact-section">Contact</a></li>
+                </ul>
 
-    <main></main>
+            </div>
+        </nav>
+    </header>
 
-    <footer></footer>
-    
+    <main>
+        <div class="wrapper">
+            <section id="story">
+            <h2>Life of a Starfish</h2>
+          <article>
+            <img class="cropped" src="images/lone-starfish.jpg" alt="Lone starfish image">
+            <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
+         </article>
+
+         <div class="facts">
+         <h3>Facts About Starfish</h3>
+         <ul>
+            <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+            <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+            <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+            <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+         </ul>
+        </div>
+    </section>
+
+        <section class="contact" id="contact-section">
+            <h3>Contact to learn more</h3>
+            <form class="contact-form">
+                <div class="name">
+                    <label for="name">Your Name</label><br>
+                    <input type="text" name="name" id="name">
+                </div>
+
+                <div class="email">
+                    <label for="email">Your Email</label><br>
+                    <input type="email" name="email" id="email">
+                </div>
+
+                <div class="message">
+                    <label for="message">Your Message</label><br>
+                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                </div>
+
+            <div class="visit-starfish">
+                <p>Would you like to visit the starfish?</p>
+                <label for="yes">Yes</label>
+                <input type="radio" id="yes" name="visit-starfish" value="yes">
+                <label for="no">No</label>
+                <input type="radio" id="no" name="visit-starfish" value="no">
+                <label for="maybe">Maybe</label>
+                <input type="radio" id="maybe" name="visit-starfish" value="maybe"><br>
+                <input type="submit" value="SEND">
+
+            </div>
+            </form>
+        </section>
+
+        <section></section>
+        <h3></h3>
+        <form></form>
+    </main>
+
+    <footer>
+        <div class="wrapper"><p>&copy; Lone Starfish</p></div>
+    </footer>
+
 </body>
 </html>
