--- a/final-project/index.html
+++ b/final-project/index.html
@@ -14,16 +14,19 @@
     
     <header>
         <nav>
-            <div class="wrapper">
+            <div class="container">
+                <div class="logo-img">
+                    <img src="images/logo.png" alt="logo">
+                </div>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="current">Home</a></li>
                     <li><a href="#about-us">About Us</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href=#team>Team</a></li>
                     <li><a href="#contact-us">Contact</a></li>
                 </ul>
 
-                <div class="form-group fg--search">
+                <div class="form-search">
                     <input type="text" class="input" placeholder="Search">
                     <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
@@ -32,12 +35,14 @@
          </nav>
 
             <div class="banner">
-                <h1>Welcome to Three Star Media</h1>
-                <img class="banner-img" src="images/main-banner.jpg" alt="welcome">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae maxime est natus sapiente vel animi quos, officiis voluptate minus perspiciatis saepe tempore nulla nemo ipsum, nisi ratione id. Laborum, nulla!</p>
-                <div class="connect-btn">
-                    <a href="#contact-us" id="connect-btn">Connect with us</a>
-                    <i class="fa-solid fa-caret-right"></i>
+                <img class="banner-img" src="images/main-banner.jpg" alt="main banner">
+                <div class="banner-info">
+                    <h1>Welcome to Three Star Media</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae maxime est natus sapiente vel animi quos, officiis voluptate minus perspiciatis saepe tempore nulla nemo ipsum, nisi ratione id. Laborum, nulla!</p>
+                    <div class="connect-btn">
+                        <a href="#contact-us" id="connect-btn">Connect with us</a>
+                        <i class="fa-solid fa-caret-right"></i>
+                    </div>
                 </div>
             </div>
     </header>
