--- a/final-project/index copy.html
+++ b/final-project/index copy.html
@@ -11,7 +11,7 @@
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/5613cb4016.js" crossorigin="anonymous"></script>
     <!-- css -->
-    <link rel="stylesheet" href="css/copynpaste.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -39,13 +39,12 @@
          </nav>
 
             <div class="banner">
+                <img src="images/main-banner.jpg" alt="banner" style="width: 100%;">
                 <div class="banner-info">
-                    <div class="buble">
-                        <h1>Welcome to Three Star Media</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae maxime est natus sapiente vel animi quos, officiis voluptate minus perspiciatis saepe tempore nulla nemo ipsum, nisi ratione id. Laborum, nulla!</p>
-                        <div class="connect-btn">
-                            <a href="#contact-us" class="bannerbtn">Connect with us <i class="fa-solid fa-caret-right"></i></a>
-                        </div>
+                    <h1>Welcome to Three Star Media</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae maxime est natus sapiente vel animi quos, officiis voluptate minus perspiciatis saepe tempore nulla nemo ipsum, nisi ratione id. Laborum, nulla!</p>
+                    <div class="connect-btn">
+                        <a href="#contact-us" class="bannerbtn">Connect with us <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -99,11 +98,11 @@
             </section>
             
             <section class="our-vision">
-                <div class="winter">
-                    <h3>Our Vision</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, cumque ex eligendi nobis alias optio eos corporis. Voluptatum odio, aperiam facere quasi sit minima unde natus rem. Atque, veritatis obcaecati!</p>
-                    <a>Learn More <i class="fa-solid fa-caret-right"></i></a>
-                </div>
+                <img src="images/vision.jpg" alt="vision">
+                <h3>Our Vision</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, cumque ex eligendi nobis alias optio eos corporis. Voluptatum odio, aperiam facere quasi sit minima unde natus rem. Atque, veritatis obcaecati!</p>
+                <input type="submit" value="Learn More">
+                <i class="fa-solid fa-caret-right"></i>
             </section>
 
             <section class="team" id="team">
@@ -141,9 +140,9 @@
                         <label for="name">Message</label><br>
                         <textarea name="message" id="message" cols="60" rows="10"></textarea>
                     </div>
-                    <input type="submit" value="Send">
+                    <input type="submit" value="SEND">
                 </form>
-            </section> 
+            </section>
 
             <section class="hours-of-operation">
                 <h3>Hours of operation</h3>
