--- a/final-project/index.html
+++ b/final-project/index.html
@@ -52,14 +52,16 @@
     </header>
 
     <main>
-        <div class="wrapper">
+        <div class="ketchup">
             <section class="about-us" id="about-us">
                 <img src="images/about-us.jpg" alt="about us">
                     <h2>About Us</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ullam necessitatibus corporis quaerat nulla sed ipsa perspiciatis eligendi, perferendis totam minus quos porro placeat vel mollitia quae iste provident eius!</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore delectus corporis maxime hic vel quis necessitatibus eligendi quas tempora aspernatur natus, saepe nesciunt ipsa, esse, fuga laboriosam sit? Ipsa, doloribus?</p>
             </section>
+        </div>
 
+        <div class="wrapper">
             <section class="services" id="services">
                 <h2>Our Services</h2>
                     <div class="digital">
