--- a/final-project/index.html
+++ b/final-project/index.html
@@ -64,6 +64,7 @@
         <div class="wrapper">
             <section class="services" id="services">
                 <h2>Our Services</h2>
+                <div class="services-content">
                     <div class="digital">
                         <img src="images/digital.jpg" alt="digital">
                         <h3>Digital Transformation</h3>
@@ -98,6 +99,7 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius vel, rem inventore quo tempora animi mollita eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
                         <a>Print Plans <i class="fa-solid fa-caret-right"></i></a>
                     </div>
+                </div>
             </section>
             
             <section class="our-vision">
